# score2midi

./: .gitignore  README.md  pyproject.toml
score2midi/: cli.py  converter.py  omr.py  renderer.py
