[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "score2midi"
version = "0.1.0"
description = "Convert sheet music images/PDFs to MIDI, WAV, or MP3"
requires-python = ">=3.12"
dependencies = [
    "oemer",
    "music21",
    "pydub",
    "typer",
    "pymupdf",
]

[project.scripts]
score2midi = "score2midi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["score2midi*"]
